--- a/style.css
+++ b/style.css
@@ -314,7 +314,7 @@ border-radius: 0 0 15px 15px !important;
 }
 .user_info p{
 	font-size: 10px;
-	color: rgba(255,255,255,0.6);
+	color: rgb(255, 255, 255);
 }
 .video_cam{
 	margin-left: 50px;
