--- a/style.css
+++ b/style.css
@@ -401,4 +401,9 @@ border-radius: 0 0 15px 15px !important;
 	.contacts_card{
 	margin-bottom: 15px !important;
 }
+
+#text {
+  color: white;
+}
+
 }
