--- a/style.css
+++ b/style.css
@@ -203,7 +203,7 @@ background: green;
 }
 .msg_card_body{
 	overflow-y: auto;
-  color: white;
+  background-color: white;
 }
 .card-header{
 	border-radius: 15px 15px 0 0 !important;
