--- a/style.css
+++ b/style.css
@@ -203,7 +203,7 @@ background: green;
 }
 .msg_card_body{
 	overflow-y: auto;
-  background-color: 0000007d;
+  background-color: dimgray;
 }
 .card-header{
 	border-radius: 15px 15px 0 0 !important;
