--- a/style.css
+++ b/style.css
@@ -420,4 +420,9 @@ border-radius: 0 0 15px 15px !important;
 
 .attribution {
 	width: 100%;
+	margin-left: 2px;
+}
+
+.smallspace {
+	margin-top: 5px;
 }
