--- a/style.css
+++ b/style.css
@@ -450,9 +450,19 @@ iframe {
 }
 
 .menuspace {
-	margin-top: calc(45%);
+	padding-top: calc(45%);
 }
 
 .sizing {
 	max-width: 768px;
+    margin: auto;
+    background-image: linear-gradient(45deg, #FF5A00, #FFAE00);
+    height: 100vh;
+    max-height: 960px;
+}
+
+.SpImage {
+	width: 45%;
+    height: 45%;
+    float: left;
 }
