--- a/style.css
+++ b/style.css
@@ -473,7 +473,7 @@ iframe {
 }
 
 #cuisinepage {
-	background-image: linear-gradient(45deg, #FF5A00, #FFAE00);
+	background-color: white;
 	max-width: 1031px;
 	display: flex;
 	flex-wrap: wrap;
