--- a/style.css
+++ b/style.css
@@ -494,15 +494,6 @@ iframe {
         margin: 5px;
         max-width: 100%;
     }
-	.italian {
-		width: 200px;
-	}
-	.index {
-		margin-left: 20%;
-	}
-	.space {
-		margin-top: 207px;
-	}
 }
 
 /* Media query for phones */
@@ -512,4 +503,21 @@ iframe {
         margin: 5px;
         max-width: 100%;
     }
+}
+
+@media (min-width: 434px) {
+    #cuisinepage img {
+        width: calc(47% - 1px);
+        margin: 5px;
+        max-width: 100%;
+    }
+	.italian {
+		width: 200px;
+	}
+	.index {
+		margin-left: 20%;
+	}
+	.space {
+		margin-top: 207px;
+	}
 }
