--- a/style.css
+++ b/style.css
@@ -460,7 +460,7 @@ iframe {
 .sizing {
 	max-width: 768px;
     margin: auto;
-    background-image: linear-gradient(45deg, #FF5A00, #FFAE00);
+    /*background-image: linear-gradient(45deg, #FF5A00, #FFAE00);*/
     height: 100vh;
     max-height: 960px;
 }
