--- a/style.css
+++ b/style.css
@@ -550,7 +550,8 @@ iframe {
 }
 
 #restaraunt {
-	background-image: linear-gradient(45deg, #FF5A00, #FFAE00);
+	*/background-image: linear-gradient(45deg, #FF5A00, #FFAE00);*/
+  background: light gray;
 }
 
 @media (max-width: 570px) {
