--- a/style.css
+++ b/style.css
@@ -551,7 +551,7 @@ iframe {
 
 #restaraunt {
 	/*background-image: linear-gradient(45deg, #FF5A00, #FFAE00);*/
-  background: lightsalmon;
+  background: white;
 }
 
 @media (max-width: 570px) {
