--- a/style.css
+++ b/style.css
@@ -587,33 +587,44 @@ iframe {
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#142400",endColorstr="#01ff00",GradientType=1);		
 }
 
-.share-buttons {
+.shareit {
+	position: fixed;
+	top: 150px;
+  }
+  
+  .shareit a {
 	display: flex;
-	gap: 10px;
- }
- .share-button {
-	border: none;
-	border-radius: 5px;
+	justify-content: center;
+	align-items: center;
+	  width: 50px;
+	height: 50px;
+	font-size: 24px;
 	color: #fff;
-	cursor: pointer;
-	font-size: 16px;
-	padding: 8px 16px;
- }
- .facebook {
-	background-color: #3b5998;
- }
- .twitter {
-	background-color: #1da1f2;
- }
- .linkedin {
-	background-color: #0077b5;
- }
- .pinterest {
-	background-color: #bd081c;
- }
- .reddit {
-	background-color: #ff4500;
- }
- .whatsapp {
-	background-color: #25d366;
- }
+	  opacity: 0.75;
+	  transition: opacity 0.15s linear;
+	text-decoration: none;
+  }
+  
+  .shareit a:hover {
+	  opacity: 1;
+  }
+  
+  .facebook {
+	   background: #3b5998;
+  }
+  
+  .twitter {
+		background: #55acee;
+  }
+  
+  .whatsapp {
+	background: green;
+  }
+  
+  .reddit {
+		background: #FF4500;
+  }
+  
+  .pinterest {
+		background: #cb2027;
+  }
