--- a/style.css
+++ b/style.css
@@ -640,3 +640,13 @@ iframe {
   .pinterest {
 		background: #cb2027;
   }
+
+  .footer {
+	position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: red;
+  color: white;
+  text-align: center;
+  }
