--- a/style.css
+++ b/style.css
@@ -643,10 +643,11 @@ iframe {
 
   .footer {
 	position: fixed;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  background-color: red;
-  color: white;
-  text-align: center;
+  	bottom: 0;
+  	width: 100%;
+  	background-color: grey;
+  	color: white;
+  	text-align: center;
+	max-width: 768px;
+	margin: auto;
   }
