--- a/style.css
+++ b/style.css
@@ -629,9 +629,9 @@ iframe {
 		background: #55acee;
   }
   
-  .whatsapp {
+  /*.whatsapp {
 	background: green;
-  }
+  }*/
   
   .reddit {
 		background: #FF4500;
